# conan-irrxml

./: .gitignore  .travis.yml  CMakeLists.txt  FindIrrXML.cmake  IrrXML.cmake  README.md  appveyor.yml  build.py  conanfile.py
patches/: irrtypes_debug_vs.patch
test_package/: CMakeLists.txt  conanfile.py  example.cpp
